# llm-router

./: .gitignore  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  PROJECT_HIGHLIGHTS.md  README.md  TECHNICAL_DESIGN.md  debug_scoring.py  pyproject.toml  railway.json  test_api.py  test_hybrid_manual.py  test_openrouter_direct.py  test_openrouter_integration.py  test_rag_manual.py  test_scoring_edge_cases.py
backend/: __init__.py  app_config.py  capabilities.py  classification.py  constraints.py  dataset.py  dataset_loader.py  llm_fallback.py  models.py  openrouter_service.py  rag_classification.py  ranking.py  registry.py  router.py  scoring.py  upsert_examples.py  utils.py  vector_service.py
backend/api/: __init__.py  main.py  models.py
backend/config/: __init__.py  model_loader.py  models.json
backend/data/: examples.json
backend/vector_stores/: vector_store_pinecone.py
docs/: DEVELOPMENT_ROADMAP.md  PROJECT_HIGHLIGHTS.md  QUICKSTART.md  TECHNICAL_DESIGN.md
frontend/: Dockerfile  Dockerfile.frontend  index.html  package-lock.json  package.json  railway.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/features/: About.tsx  ModelInfo.tsx  Models.tsx  PreferencesPanel.tsx  PromptInput.tsx  ResponseDisplay.tsx  Router.tsx  RoutingResults.tsx  index.ts
frontend/src/components/layout/: index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Slider.tsx  index.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: index.ts
llm_router/: __init__.py  app_config.py  capabilities.py  classification.py  classifier_factory.py  config.py  constraints.py  core.py  dataset.py  embeddings.py  hybrid_classification.py  llm_fallback.py  models.py  openrouter_client.py  rag_classification.py  ranking.py  registry.py  router.py  scoring.py  vector_service.py
llm_router/api/: logger.py  main.py  models.py
llm_router/config/: models.json
llm_router/data/: examples.json
llm_router/vector_stores/: __init__.py  vector_store_interface.py
scripts/: run_api.py
tests/: conftest.py  test_capabilities.py  test_project_setup.py
tests/e2e/: test_api_e2e.py  test_routing_e2e.py
tests/integration/: conftest.py  test_api_endpoints.py  test_api_error_handling.py  test_api_integration.py  test_api_middleware.py  test_api_preferences_constraints.py  test_api_request_validation_middleware.py  test_classification_integration.py  test_dataset_integration.py  test_hybrid_classification_with_llm_fallback.py  test_routing_pipeline.py  test_vector_service_integration.py
tests/unit/: test_classification.py  test_config.py  test_constraints.py  test_dataset.py  test_dataset_loader.py  test_embeddings.py  test_hybrid_classification.py  test_llm_fallback.py  test_models.py  test_rag_classification.py  test_ranking.py  test_registry.py  test_router.py  test_scoring.py  test_validation_design.py  test_vector_service.py  test_vector_store_interface.py
